crates/mako/src/transformers/snapshots/mako__transformers__transform_try_resolve__tests__try_import_do_not_resolve.snap
---
source: crates/mako/src/transformers/transform_try_resolve.rs
expression: "transform(r#\"\n            try {\n                import('foo');\n            } catch (e) {\n                console.log(e);\n            }\n            \"#)"
---
try {
    import('foo');
} catch (e) {
    console.log(e);
}
