crates/mako/src/transformers/snapshots/mako__transformers__transform_try_resolve__tests__try_require_with_exports.snap
---
source: crates/mako/src/transformers/transform_try_resolve.rs
expression: "transform(r#\"\n            try {\n                exports.xxx = require('foo');\n            } catch (e) {\n                console.log(e);\n            }\n            \"#)"
---
try {
    exports.xxx = require(Object(function makoMissingModule() {
        var e = new Error("Cannot find module 'foo'");
        e.code = "MODULE_NOT_FOUND";
        throw e;
    }()));
} catch (e) {
    console.log(e);
}
